--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,17 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
 
 # production
 /build
+
+
+# Webstorm
+.idea
+.idea/
 
 # misc
 .DS_Store
