--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "emotion": "^10.0.9",
+    "husky": "^2.1.0",
+    "lint-staged": "^8.1.5",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
