--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-scripts": "3.0.0",
+    "react-spring": "^8.0.19",
     "redux": "^4.0.1"
   },
   "scripts": {
