--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^1.5.4",
     "husky": "^2.1.0",
     "lint-staged": "^8.1.5",
+    "lodash": "^4.17.11",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
