--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.0.2",
     "react-scripts": "3.0.0",
     "react-spring": "^8.0.19",
+    "react-testing-library": "^7.0.0",
     "redux": "^4.0.1"
   },
   "scripts": {
