--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "emotion": "^10.0.9",
+    "express": "^4.18.2",
     "formik": "^1.5.4",
     "husky": "^2.1.0",
     "lint-staged": "^8.1.5",
